PEL -- Pragmatic Emacs Library --  NEWS         -*- org -*-

* Changes since Version 0.4.1:
** Modifications, Fixes and Improvements:
- Enhanced the code template skeleton ability to create section titles.  A title string that begins
  with the character ~.~ is inserted verbatim following a separator line.  A title that starts with the ~,~ character
  is inserted verbatim.
  - The default value of the *pel-c-skel-hfile-section-titles* customized variable uses this new feature to insert the
    C++ support 'extern "C"' pre-processor code in C header files templates.
- Add ability to convert the case of one or several letters to standard key bindings which now behave as before when an
  area is marked but can also operate with no marked area, converting N letters from point (with N defaulting to 1):
  - The ~C-x C-l~ key sequence is not bound to the new *pel-downcase-letter* command.
  - The ~C-x C-u~ key sequence is not bound to the new *pel-upcase-letter* command.
- The *pel-next-frame* (bound to ~<f11> F n~) and *pel-previous-frame* (bound to ~<f11> F p~) now honour the frame numbers:
  the *pel-next-frame* changes to the frame that has a larger number than the current frame and the *pel-previous-frame* changes
  the frame to the one that has a lower frame number.  The used Emacs functions behave in the reverse direction; the PEL commands
  now use the more conventional order.
- The *pel-duplicate-line* command (bound to ~<f6> d~) now supports value 0 for the argument: with numeric argument value 0
  the command creates a single duplicate but does not move point: it keeps the point on the original line.
- Add key binding ~M-<f5>~ to *pel-search-word-from-top*, it's easier to type with a numeric prefix
  than the ~M-<f11> s .~ key sequence (which is retained) and is a very useful command to be able to
  quickly access it.
- Add key binding ~<f11> b L~ to *emacs-lock-mode*.