@@ -2,6 +2,9 @@ PEL -- Pragmatic Emacs Library --  NEWS         -*- org -*-
 
 * Changes since Version 0.4.1:
 ** Modifications, Fixes and Improvements:
+- In C and C++ buffers, the *pel-cc-mode-info* command (bound to ~<f12> <f4> ?~) now prints the list
+  of customization variables controlling the code generation skeletons and their values, in the opened
+  info buffer.  The variable names are links that can be used to change their values.
 - Enhanced the code template skeleton ability to create section titles.  A title string that begins
   with the character ~.~ is inserted verbatim following a separator line.  A title that starts with the ~,~ character
   is inserted verbatim.
